SigmaCodebackup3rdSep/objects/Budget_Items__c.object
<CustomObject>
    <description>Stores budget items details</description>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Budget Amount</description>
        <inlineHelpText>Enter budget amount</inlineHelpText>
        <label>Budget Amount</label>
        <precision>16</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Acheived__c</fullName>
        <formula>1  -  IF( Budget_Type__c  = &apos;Budget - Purchase&apos;, ((  Amount__c - Total_Purchased_Amount__c ) / Amount__c ), 
IF( Budget_Type__c  = &apos;Sales Target&apos;, (( Amount__c - Total_Sold_Amount__c ) / Amount__c ), 
(( Amount__c -  Total_Amount_Project__c  ) / Amount__c )
 )
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Acheived</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Budget_Type__c</fullName>
        <formula>TEXT( Budget__r.Budget_Type__c )</formula>
        <label>Budget Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Master-detail budget field</description>
        <inlineHelpText>Budget field reference</inlineHelpText>
        <label>Budget</label>
        <referenceTo>Budget__c</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related to product</description>
        <inlineHelpText>Choose the product for the budget</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipLabel>Budget Items</relationshipLabel>
        <relationshipName>Budget_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Related to budget quantity</description>
        <inlineHelpText>Enter bugger quantity</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Project__c</fullName>
        <label>Total Amount Spent on Project</label>
        <summarizedField>Budget_Transaction__c.Amt_in_project__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Service Order</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Transaction__c.Budget_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Purchased_Amount__c</fullName>
        <label>Total Purchased Amount</label>
        <summarizedField>Budget_Transaction__c.Amt_in_PO__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Purchase Order</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Transaction__c.Budget_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sold_Amount__c</fullName>
        <label>Total Sold Amount</label>
        <summarizedField>Budget_Transaction__c.Amt_in_SO__c</summarizedField>
        <summaryFilterItems>
            <field>Budget_Transaction__c.Transaction_Type__c</field>
            <operation>equals</operation>
            <value>Sigma Order</value>
        </summaryFilterItems>
        <summaryForeignKey>Budget_Transaction__c.Budget_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Budget Items</label>
    <nameField>
        <displayFormat>BGI-{000000}</displayFormat>
        <label>Budget Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>